--- a/dapp/app/src/index.html
+++ b/dapp/app/src/index.html
@@ -28,6 +28,22 @@
           <div class="jumbotron text-center">
                <h1>Picolo</h1>
           </div>
+          <ul class="nav nav-tabs">
+             <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
+             <li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
+             <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
+           </ul>
+
+           <div class="tab-content">
+             <div id="Miners" class="tab-pane fade in active">
+               <h3>HOME</h3>
+               <p>Some content.</p>
+             </div>
+             <div id="Voters" class="tab-pane fade">
+               <h3>Menu 1</h3>
+               <p>Some content.</p>
+             </div>
+           </div>
      </div>
 
      <div id="footer" class="container">
