added clean tabs for miners and voters

--- a/dapp/app/src/index.html
+++ b/dapp/app/src/index.html
@@ -29,18 +29,17 @@
                <h1>Picolo</h1>
           </div>
           <ul class="nav nav-tabs">
-             <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
-             <li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
-             <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
+             <li class="active"><a data-toggle="tab" href="#Miners">Miners</a></li>
+             <li><a data-toggle="tab" href="#Voters">Voters</a></li>
            </ul>
 
            <div class="tab-content">
              <div id="Miners" class="tab-pane fade in active">
-               <h3>HOME</h3>
+               <h3>Miners</h3>
                <p>Some content.</p>
              </div>
              <div id="Voters" class="tab-pane fade">
-               <h3>Menu 1</h3>
+               <h3>Voters</h3>
                <p>Some content.</p>
              </div>
            </div>
