--- a/dapp/app/src/index.html
+++ b/dapp/app/src/index.html
@@ -51,7 +51,7 @@
                          </div>
                          <div>
                              <div class="card" v-for="node in malicious">
-                                 {{node}}
+                                 {{node}} <br>
                                  <button class="btn btn-primary" @click="asCooperative(node)">vote cooperative</button>
                              </div>
                          </div>
