--- a/dapp/app/src/index.html
+++ b/dapp/app/src/index.html
@@ -35,8 +35,84 @@
 
            <div class="tab-content">
              <div id="Miners" class="tab-pane fade in active">
-               <h3>Miners</h3>
-               <p>Some content.</p>
+               <!-- <h3>Miners</h3>
+               <p>Some content.</p> -->
+               <div class="col-md-12" id="article-list">
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <p id="account" class="welcome pull-right"></p>
+                      <p id="accountBalance" class="welcome pull-left"></p>
+                    </div>
+                  </div>
+
+                  <div class="row panel panel-default">
+                    <div class="panel-heading clearfix">
+                      <div class="panel-title">
+                        <button class="btn btn-info btn-lg pull-left" data-toggle="modal" data-target="#sellArticle">Tokens</button>
+                        <button class="btn btn-info btn-lg" data-toggle="modal" data-target="#sellArticle">Load</button>
+                        <button class="btn btn-info btn-lg pull-right" data-toggle="modal" data-target="#sellArticle">SQL Queries</button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div id="articlesRow" class="row">
+                    <!-- ARTICLES LOAD HERE -->
+                  </div>
+                </div>
+               <div id="articleTemplate" style="display: none;">
+                  <div class="row-lg-12">
+                    <div class="panel panel-default panel-article">
+                      <div class="panel-heading">
+                        <h3 class="panel-title"></h3>
+                      </div>
+                      <div class="panel-body">
+                        <strong>Description</strong>: <span class="article-description"></span><br/>
+                        <strong>Price (ETH)</strong>: <span class="article-price"></span><br/>
+                        <strong>Sold by</strong>: <span class="article-seller"></span><br/>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Modal form to sell an article -->
+                <div class="modal fade" id="sellArticle" role="dialog">
+                  <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Sell your article</h4>
+                      </div>
+                      <div class="modal-body">
+
+                        <div class="row">
+                          <div class="col-lg-12">
+                            <form>
+                              <div class="form-group">
+                                <label for="article_name">Article name</label>
+                                <input type="text" class="form-control" id="article_name" placeholder="Enter the name of your article">
+                              </div>
+                              <div class="form-group">
+                                <label for="price">Price in ETH</label>
+                                <input type="number" class="form-control" id="article_price" placeholder="1" pattern="[0-9]+([\.,][0-9]+)?" step="0.01">
+                              </div>
+                              <div class="form-group">
+                                <label for="description">Description</label>
+                                <textarea type="text" class="form-control vresize" id="article_description" placeholder="Describe your article" maxlength="255"></textarea>
+                              </div>
+                            </form>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-primary btn-success" data-dismiss="modal" onclick="App.sellArticle(); return false;">Submit</button>
+                        <button type="button" class="btn" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
              </div>
              <div id="Voters" class="tab-pane fade">
                <h3>Voters</h3>
