Added dropdown and events

--- a/dapp/app/src/index.html
+++ b/dapp/app/src/index.html
@@ -50,9 +50,30 @@
                     <div class="panel-heading clearfix">
                       <div class="panel-title">
                         <button class="btn btn-info btn-lg pull-left" data-toggle="modal" data-target="#sellArticle">Tokens</button>
-                        <button class="btn btn-info btn-lg" data-toggle="modal" data-target="#sellArticle">Load</button>
-                        <button class="btn btn-info btn-lg pull-right" data-toggle="modal" data-target="#sellArticle">SQL Queries</button>
+                        <!-- <button class="btn btn-info btn-lg" data-toggle="modal" data-target="#sellArticle">Load</button> -->
+                        <button class="btn btn-info btn-lg pull-right" data-toggle="modal" data-target="#sellArticle">Metrics</button>
                       </div>
+                    </div>
+                  </div>
+
+                  <div class="row panel panel-default">
+                    <div class="panel-heading clearfix">
+                      <div class="panel-title">
+                        <button class="btn btn-info btn-lg pull-left" data-toggle="collapse" data-target="#events" aria-expanded="false" aria-controls="events">Events</button>
+                      </div>
+                    </div>
+                    <ul id="events" class="collapse list-group"></ul>
+                  </div>
+
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Select Actions
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item" data-toggle="modal" data-target="#sellArticle" href="#">Register</a>
+                      <a class="dropdown-item" data-toggle="modal" data-target="#sellArticle" href="#">Start</a>
+                      <a class="dropdown-item" data-toggle="modal" data-target="#sellArticle" href="#">Stop</a>
+                      <a class="dropdown-item" data-toggle="modal" data-target="#sellArticle" href="#">UnRegister</a>
                     </div>
                   </div>
 
@@ -139,7 +160,7 @@
      <div id="footer" class="container">
           <nav class="navbar navbar-default navbar-fixed-bottom">
                <div class="navbar-inner navbar-content-center text-center">
-                    <p class="text-muted" credit><a href="http://chainskills.com">ChainSkills</a> - &copy; 2017 - <a href="https://twitter.com/sarbogast">Sebastien Arbogast</a> and <a href="https://twitter.com/eloudsa">Said Eloudrhiri</a></p>
+                    <p class="text-muted" credit><a href="https://github.com/picolonetwork/alpha">Picolo-Project</a> - &copy; 2018</p>
                </div>
           </nav>
      </div>
