refined the web ui

--- a/dapp/app/src/index.html
+++ b/dapp/app/src/index.html
@@ -49,31 +49,32 @@
                   <div class="row panel panel-default">
                     <div class="panel-heading clearfix">
                       <div class="panel-title">
-                        <button class="btn btn-info btn-lg pull-left" data-toggle="modal" data-target="#sellArticle">Tokens</button>
+                        <!-- <button class="btn btn-info btn-lg pull-left" data-toggle="modal" data-target="#sellArticle">Tokens</button> -->
                         <!-- <button class="btn btn-info btn-lg" data-toggle="modal" data-target="#sellArticle">Load</button> -->
+                        <button class="btn btn-info btn-lg pull-left" data-toggle="collapse" data-target="#events" aria-expanded="false" aria-controls="events">Events</button>
                         <button class="btn btn-info btn-lg pull-right" data-toggle="modal" data-target="#sellArticle">Metrics</button>
                       </div>
                     </div>
                   </div>
 
-                  <div class="row panel panel-default">
+                  <!-- <div class="row panel panel-default">
                     <div class="panel-heading clearfix">
                       <div class="panel-title">
                         <button class="btn btn-info btn-lg pull-left" data-toggle="collapse" data-target="#events" aria-expanded="false" aria-controls="events">Events</button>
                       </div>
                     </div>
                     <ul id="events" class="collapse list-group"></ul>
-                  </div>
+                  </div> -->
 
                   <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-lg btn-primary dropdown-toggle select-actions" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Select Actions
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <a class="dropdown-item" data-toggle="modal" data-target="#sellArticle" href="#">Register</a>
+                      <a class="dropdown-item" data-toggle="modal" data-target="#sellArticle" href="#">Register Node</a>
                       <a class="dropdown-item" data-toggle="modal" data-target="#sellArticle" href="#">Start</a>
                       <a class="dropdown-item" data-toggle="modal" data-target="#sellArticle" href="#">Stop</a>
-                      <a class="dropdown-item" data-toggle="modal" data-target="#sellArticle" href="#">UnRegister</a>
+                      <a class="dropdown-item" data-toggle="modal" data-target="#sellArticle" href="#">UnRegister Node</a>
                     </div>
                   </div>
 
