--- a/dapp/app/src/index.html
+++ b/dapp/app/src/index.html
@@ -11,13 +11,6 @@
      <!-- Bootstrap -->
      <link href="css/bootstrap.min.css" rel="stylesheet">
 
-     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
      <!-- Application -->
      <link href="css/app.css" rel="stylesheet">
     <link rel="stylesheet" href="css/voterUI.css">
@@ -25,7 +18,7 @@
 </head>
 
 <body>
-     <div class="container" id="vueapp">
+     <div class="container">
           <div class="jumbotron text-center">
                <h1>Picolo</h1>
           </div>
@@ -52,7 +45,7 @@
                         <!-- <button class="btn btn-info btn-lg pull-left" data-toggle="modal" data-target="#sellArticle">Tokens</button> -->
                         <!-- <button class="btn btn-info btn-lg" data-toggle="modal" data-target="#sellArticle">Load</button> -->
                         <button class="btn btn-info btn-lg pull-left" data-toggle="collapse" data-target="#events" aria-expanded="false" aria-controls="events">Events</button>
-                        <button class="btn btn-info btn-lg pull-right" data-toggle="modal" data-target="#sellArticle">Metrics</button>
+                        <button class="btn btn-info btn-lg pull-right" data-toggle="modal" data-target="#sellArticle" href="https://google.com">Metrics</button>
                       </div>
                     </div>
                   </div>
@@ -138,7 +131,7 @@
                 </div>
              </div>
              <div id="Voters" class="tab-pane fade">
-                 <div>
+                 <div id="vueapp">
                      <div class="wrapper">
                          <div>
                              <transition-group name="list" tag="p">
@@ -162,7 +155,6 @@
            </div>
      </div>
 
-
      <div id="footer" class="container">
           <nav class="navbar navbar-default navbar-fixed-bottom">
                <div class="navbar-inner navbar-content-center text-center">
@@ -171,21 +163,13 @@
           </nav>
      </div>
 
-    <button @click="displayAccountInfo">display</button>
+
 
      <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
      <script>
-         import Web3 from 'web3'
-         import TruffleContract from 'truffle-contract'
-         import Picolo from 'Picolo.json'
-
        new Vue({
          el: '#vueapp',
          data: {
-           web3Provider: null,
-           web3: null,
-           picolo: null,
-           account: '0x0',
            cooperative: ['a', 'b', 'c'],
            malicious: [],
          },
@@ -197,32 +181,8 @@
            asCooperative(id){
              this.malicious.splice(this.malicious.indexOf(id), 1);
              this.cooperative.push(id);
-           },
-           displayAccountInfo() {
-             this.web3.eth.getCoinbase((err, account) => {
-               if (err === null) {
-                 this.account = account;
-                 alert(account);
-                 this.web3.eth.getBalance(this.account, (err, balance) => {
-                   if (err === null) {
-                     alert(this.web3.fromWei(balance, "ether") + " ETH");
-                   }
-                 })
-               }
-             })
-           },
-         },
-         created(){
-           if (typeof web3 != 'undefined') {
-             this.web3Provider = web3.currentProvider
-           } else {
-             this.web3Provider = new Web3.providers.HttpProvider('http://localhost:7545')
            }
-
-           this.web3 = new Web3(this.web3Provider)
-
-           this.picolo = TruffleContract(Picolo)
-           this.picolo.setProvider(this.web3Provider)
+         }
        })
      </script>
 
