--- a/dapp/app/src/index.html
+++ b/dapp/app/src/index.html
@@ -45,7 +45,7 @@
                         <!-- <button class="btn btn-info btn-lg pull-left" data-toggle="modal" data-target="#sellArticle">Tokens</button> -->
                         <!-- <button class="btn btn-info btn-lg" data-toggle="modal" data-target="#sellArticle">Load</button> -->
                         <button class="btn btn-info btn-lg pull-left" data-toggle="collapse" data-target="#events" aria-expanded="false" aria-controls="events">Events</button>
-                        <button class="btn btn-info btn-lg pull-right" data-toggle="modal" data-target="#sellArticle" href="https://google.com">Metrics</button>
+                        <button class="btn btn-info btn-lg pull-right"; onclick="location.href = 'https://www.grafana.com';">Metrics</button>
                       </div>
                     </div>
                   </div>
